--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,13 @@
       }
     }
   ],
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.9"
+    },
+    "installCommand": "pip install -r requirements.txt",
+    "buildCommand": "python manage.py collectstatic --noinput"
+  },
   "routes": [
     {
       "src": "/static/(.*)",
