--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ openai==0.28
 celery
 certifi
 cffi
+chardet
 charset-normalizer
 click
 click-didyoumean
@@ -36,6 +37,7 @@ distro
 dj-database-url
 Django
 django
+docx
 django-autocomplete-light
 django-cors-headers
 django-countries
@@ -68,32 +70,21 @@ jedi
 joblib
 jsonpatch
 jsonpointer
-jupyter_client
-jupyter_core
-keras
 kiwisolver
 kombu
 Markdown
 markdown-it-py
 MarkupSafe
-marshmallow
-matplotlib
-matplotlib-inline
-mdurl
-ml-dtypes
 multidict
 mypy-extensions
 namex
 nest-asyncio
-numpy
 oauthlib
 openai==0.28.0
 opt-einsum
 optree
 orjson
 packaging
-pandas
-parso
 phonenumbers
 pillow
 platformdirs
@@ -116,6 +107,7 @@ pytest-django
 python-dateutil==2.9.0.post0
 python-dotenv
 python3-openid
+python-docx
 pytz==2024.1
 PyYAML
 pyzmq
@@ -128,19 +120,10 @@ seaborn
 setuptools
 six
 sniffio
-social-auth-app-django
-social-auth-core
 SQLAlchemy
 sqlparse
 stack-data
 tenacity
-tensorboard
-tensorboard-data-server
-tensorflow
-tensorflow-intel
-termcolor
-threadpoolctl
-tornado
 tqdm
 traitlets
 typing-inspect
