--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -56,7 +56,9 @@ jobs:
         APP_DIR="/home/${{ secrets.PYTHONANYWHERE_USERNAME }}/smartsuiteapisdeployment"
 
 
-        mkdir -p ~/.ssh
+        mkdir -p ~/.ssh  
+        echo "${{ secrets.PYTHONANYWHERE_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ssh.pythonanywhere.com >> ~/.ssh/known_hosts
 
         
